Fix logo alignment issues on mobile screens

--- a/src/scss/bootstrap-custom/_navbar.scss
+++ b/src/scss/bootstrap-custom/_navbar.scss
@@ -29,7 +29,7 @@
         min-width: $sidebar-base-width;
         margin-right: 0;
 
-        @media(max-width: $screen-size-md) {
+        @media(max-width: 920px) {
             text-align: center;
         }
         
